src/styles/global.css
/* imports */
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins:wght@300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Train+One&display=swap');

/* Custom Properties */

:root {
  /* Colors */
  --battleship-grey: hsla(80, 4%, 49%, 1);
  --battleship-grey-light: hsla(80, 4%, 79%, 1);
  --battleship-grey-dark: hsla(80, 4%, 29%, 1);

  --silver: hsla(60, 9%, 75%, 1);
  --silver-light: hsla(60, 9%, 95%, 1);
  --silver-dark: hsla(60, 9%, 55%, 1);

  --misty-rose: hsla(5, 48%, 89%, 1);
  --misty-rose-light: hsla(5, 48%, 94%, 1);
  --misty-rose-dark: hsla(5, 48%, 69%, 1);

  --silver-pink: hsla(0, 19%, 77%, 1);
  --silver-pink-light: hsla(0, 19%, 90%, 1);
  --silver-pink-dark: hsla(0, 19%, 57%, 1);

  --silver-pink-2: hsla(17, 20%, 68%, 1);
  --silver-pink-2-light: hsla(17, 20%, 88%, 1);
  --silver-pink-2-dark: hsla(17, 20%, 48%, 1);

  --umber: hsla(20, 23%, 35%, 1);
  --umber-light: hsla(20, 23%, 75%, 1);
  --umber-dark: hsla(20, 23%, 21%, 1);

  --gold-crayola: hsla(32, 74%, 71%, 1);
  --gold-crayola-light: hsla(32, 74%, 81%, 1);
  --gold-crayola-dark: hsla(32, 74%, 51%, 1);

  --fawn: hsla(30, 59%, 64%, 1);
  --fawn-light: hsla(30, 59%, 84%, 1);
  --fawn-dark: hsla(30, 59%, 44%, 1);

  /* Color Intentions */
  --backgroundColor: var(--silver-light);
  --textColor: var(--umber-dark);
  --textColorLight: var(--silver-light);
  --darkBackgroundColor: var(--battleship-grey);
  --cardColor: var(--misty-rose-light);
  --cardButtonsColor: var(--battleship-grey-dark);
  --softAccent: var(--misty-rose-dark);
  --linkHoverColor: var(--gold-crayola-dark);

  --headerColor: var(--darkBackgroundColor);
  --headerTextColor: var(--textColorLight);

  /* Type */
  --baseFontSize: 100%;
  --headingFonts: 'Poppins', sans-serif;
  --bodyFonts: 'Poppins', sans-serif;
  --smallText: 0.75rem;
  --h1: 4.209rem;
  --h2: 3.157rem;
  --h3: 2.369rem;
  --h4: 1.777rem;
  --h5: 1.333rem;

  /* Elevations */
  --level1: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  --level2: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
  --level3: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.23);
}

html {
  font-size: var(--baseFontSize);
  box-sizing: border-box;
  overflow-x: hidden;
} /*16px*/

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  font-family: var(--headingFonts);
  background-color: var(--backgroundColor);
  font-weight: 400;
  line-height: 1.75;
}

/* From Type-scale */
p {
  margin-bottom: 1rem;
  max-width: 65ch;
  color: var(--textColor);
  font-family: var(--bodyFonts);
}

h1,
h2,
h3,
h4,
h5 {
  margin: 3rem 0 1.38rem;
  font-family: var(--headingFonts);
  font-weight: 400;
  line-height: 1.3;
  color: var(--textColor);
}

h1 {
  margin-top: 0;
  font-size: 4.209rem;
}

h2 {
  font-size: 3.157rem;
}

h3 {
  font-size: 2.369rem;
}

h4 {
  font-size: 1.777rem;
}

h5 {
  font-size: 1.333rem;
}

small,
.text_small {
  font-size: 0.75rem;
}

header {
  background-color: var(--headerColor);
  color: var(--headerTextColor);
  padding: 2.5rem 1rem 1rem 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  font-family: var(--bodyFonts);
}

header nav a + a {
  margin-left: 20px;
}

header a {
  color: var(--headerTextColor);
  text-decoration: none;
}

a {
  color: var(--textColor);
  text-decoration: none;
  transition: 0.1s all;
}

a:hover {
  color: var(--linkHoverColor);
  /* text-decoration: underline; */
}

footer {
  background-color: var(--headerColor);
  color: var(--headerTextColor);
  padding: 1rem;
  display: flex;
  justify-content: space-around;
}

main {
  max-width: 900px;
  margin: 3rem auto;
}

html,
body,
#___gatsby,
#gatsby-focus-wrapper {
  height: 100%;
}

#resume-page {
  max-width: 67ch;
}

#contact-page {
  min-height: 90%;
}

#me {
  font-size: 2rem;
}

@media (max-width: 720px) {
  :root {
    --baseFontSize: 90%;
  }

  main {
    padding: 1rem;
  }

  #me {
    font-size: 1rem;
  }
}

/* Probably want to go down a bit more for small screens, but need to look into it */
/* @media (max-width: 600px) {
  :root {
    --baseFontSize: 70%;
  }
} */

/* THEMES */
.dark {
  --backgroundColor: black;
  --textColor: white;
  --textColorLight: black;
  --darkBackgroundColor: var(--misty-rose-light);
  --cardColor: hsl(271deg 6% 20%);
  --cardButtonsColor: lightgray;
  --softAccent: var(--misty-rose-dark);
  --linkHoverColor: var(--gold-crayola-dark);
  --headerColor: hsl(271deg 6% 10%);
  --headerTextColor: var(--misty-rose-light);
}

.retrowave {
  --pink: rgba(222, 16, 230, 0.9);
  --purple: rgba(121, 9, 196, 0.9);
  --purple-dark: rgba(59, 4, 95, 0.9);
  --yellow: rgba(255, 196, 0, 0.9);
  --teal: rgba(11, 182, 235, 0.9);

  --backgroundColor: var(--purple-dark);
  --textColor: var(--pink);
  --textColorLight: var(--purple-dark);
  --darkBackgroundColor: var(--purple);
  --cardColor: var(--purple);
  --cardButtonsColor: var(--teal);
  --softAccent: var(--pink);
  --linkHoverColor: var(--teal);

  --headerColor: var(--purple-dark);
  --headerTextColor: var(--yellow);

  --headingFonts: 'Train One', cursive;
  --bodyFonts: 'Inconsolata', monospace;
}

@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
.hack3r {
  --green: rgb(0, 235, 20);
  --black: rgb(29, 29, 29);

  --backgroundColor: var(--black);
  --textColor: var(--green);
  --textColorLight: var(--green);
  --darkBackgroundColor: var(--black);
  --cardColor: rgb(47, 56, 45);
  --cardButtonsColor: var(--black);
  --softAccent: var(--green);
  --linkHoverColor: yellow;

  --headerColor: var(--black);
  --headerTextColor: var(--green);

  --headingFonts: 'Space Mono', monospace;
  --bodyFonts: 'Space Mono', monospace;
}

